--- a/functions/index.html
+++ b/functions/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="hw1.js"></script> -->
+    <script src="HOF.js"></script>
 </body>
 </html>
