--- a/functions/index.html
+++ b/functions/index.html
@@ -12,6 +12,7 @@
 
     <!-- <script src="script.js"></script> -->
     <!-- <script src="hw1.js"></script> -->
-    <script src="HOF.js"></script>
+    <!-- <script src="HOF.js"></script> -->
+    <script src="hw-solutions.js"></script>
 </body>
 </html>
