--- a/functions/index.html
+++ b/functions/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="hw1.js"></script> -->
     <!-- <script src="HOF.js"></script> -->
-    <script src="hw-solutions.js"></script>
+    <!-- <script src="hw-solutions.js"></script> -->
+    <script src="iife.js"></script>
 </body>
 </html>
