--- a/functions/index.html
+++ b/functions/index.html
@@ -9,11 +9,13 @@
 
 </head>
 <body>
-
+    
     <!-- <script src="script.js"></script> -->
     <!-- <script src="hw1.js"></script> -->
     <!-- <script src="HOF.js"></script> -->
     <!-- <script src="hw-solutions.js"></script> -->
-    <script src="iife.js"></script>
+    <!-- <script src="iife.js"></script> -->
+    <!-- <script src="hw2.js"></script> -->
+    <script src="recursion.js"></script>
 </body>
 </html>
