--- a/DOM/index.html
+++ b/DOM/index.html
@@ -21,7 +21,6 @@
         <li>yellow</li>
         <li>white</li>
     </ol>
-
     <button id="btn">Color light sabers</button>
 
     <input id="inputText" type="text">
@@ -99,26 +98,45 @@
     <div id="lightSabers">
     </div>
 
-    <label for="">
-        red
-        <input id="r" type="number">
+    <label id="redLabel">
+        Red:
+        <input type="range" min="0" max="255" value="0" id="red">
     </label>
-    <label for="">
-        green
-        <input id="g" type="number">
+    <label>
+        Green:
+        <input type="range" min="0" max="255" value="0" id="green">
     </label>
-    <label for="">
-        blue
-        <input id="b" type="number">
+    <label>
+        Blue:
+        <input type="range" min="0" max="255" value="0" id="blue">
     </label>
-  
+    <div id="colorDiv"></div>
 
-    <script src="script.js"></script>
+    <div id="text">
+        lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.
+    </div>
+
+
+    <!-- 1. create 3 divs with ids and a button with id "clickBtn" inside all of them -->
+    <!-- 2. select all the divs and the button into variables -->
+    <div id="green-div" style="background-color: green; width: 150px; height: 150px; margin: auto;">
+        <div id="blue-div" style="background-color: blue; width: 100px; height: 100px; margin: auto;">
+            <div id="red-div" style="background-color: red; width: 50px; height: 50px;margin: auto;">
+                <button id="clickBtn-div">click me</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- <script src="script.js"></script>
     <script src="hw1.js"></script>
-    <script src="DOMManipulation.js"></script>
-    <style>
-        
-    </style>
+ 
+     <script src="DOMManipulation.js"></script> -->
+    <!-- <script src="hw-dom-man.js"></script>  -->
+   <script src="bubbling.js"></script>
 </body>
 
 </html>
