--- a/DOM/index.html
+++ b/DOM/index.html
@@ -13,7 +13,9 @@
     <h1>DOM - Document Object Model</h1>
     <h1>light saber colors</h1>
     <ol>
-        <li>blue</li>
+        <li>Luke
+            <img class="init" src="" alt="">
+        </li>
         <li>green</li>
         <li>red</li>
         <li>purple</li>
