--- a/object/index.html
+++ b/object/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .red {
+            background-color: red;
+            height: 100px;
+            width: 100px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="id"></div>
 
     <script src="script.js"></script>
 </body>
