--- a/object/index.html
+++ b/object/index.html
@@ -16,6 +16,21 @@
 <body>
     <div id="id"></div>
 
+    <label>First Name: </label>
+    <input id="firstNameBox" type="text">
+    <br><br>
+
+    <label>Last Name: </label>
+    <input id="lastNameBox" type="text">
+    <br><br>
+
+    <label>City: </label>
+    <input id="cityBox" type="text">
+    <br><br>
+
+    <button id="save">Save</button>
+    <button id="load">Load</button>
+
     <script src="script.js"></script>
 </body>
 </html>
