--- a/async/index.html
+++ b/async/index.html
@@ -10,6 +10,8 @@
     
     <div id="ok"></div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="hw.js"></script> -->
+    <script src="async-await.js"></script>
 </body>
 </html>
