--- a/modules/index.html
+++ b/modules/index.html
@@ -28,7 +28,7 @@
             <a href="#" class="list-group-item list-group-item-action">Disabled item</a>
         </div>
     </div>
-    <script src="recap.js"></script>
+    <script src="app.js" type="module"></script>
 
 
 </body>
