--- a/array/TodoList/index.html
+++ b/array/TodoList/index.html
@@ -15,6 +15,6 @@
         <li>"quit" - Quit App</li>
     </ul>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
