--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/pic-icon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css">
 
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="../src/app.js" type="module"></script>
-    
+
     <title>Slide Show - App</title>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <nav class="navbar navbar-expand-xxl navbar-dark bg-dark" aria-label="Seventh navbar example">
+            <div class="container-fluid">
+                <span class="navbar-brand cursor" id="home-link">SSA</span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSlideshow"
+                    aria-controls="navbarSlideshow" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSlideshow">
+
+                    <ul class="navbar-nav me-auto mb-2 mb-xl-0 justify-content-between" style="width: -webkit-fill-available;">
+                        <li class="nav-item">
+                            <span class="nav-link cursor">About</span>
+                        </li>
+                        <li class="nav-item me-auto">
+                            <span class="nav-link cursor">Add Pic</span>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link cursor">Login</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+     
+
+    </main>
     <footer></footer>
 </body>
+
 </html>
