--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -103,6 +103,20 @@
                     <hr />
                 </div>
             </div>
+            <div class="center">
+                <form  class="col-12 col-md-10 col-xl-8 border p-2 rounded">
+                    <div>
+                        <label for="url-field">url</label>
+                        <input 
+                            type="url"
+                            class="form-control mb-2" 
+                            name="url"
+                            id="url-field"
+                            minlength="2" />
+                        <span id="url-error-span" class="text-danger"></span>
+                    </div>
+                </form>
+            </div>
         </div>
 
         <!-- דף התחברות -->
