--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -125,7 +125,7 @@
                     </div>
 
                     <input type="button" id="submit-create-pic-btn" value="Submit"
-                        class="btn btn-primary col-12 mb-2" />
+                        class="btn btn-primary col-12 mb-2" disabled />
                     <input type="button" id="cancel-create-pic-btn" value="Cancel"
                         class="btn btn-outline-danger col-12 mb-2" />
                 </form>
