--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -18,100 +18,64 @@
 
 <body>
     <header>
-        <nav
-          class="navbar navbar-expand-lg navbar-dark bg-dark"
-          aria-label="Fifth navbar example"
-        >
-          <div class="container-fluid">
-            <span id="home-link" class="navbar-brand cursor">SSA</span>
-            <button
-              class="navbar-toggler collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarsExample05"
-              aria-controls="navbarsExample05"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-  
-            <div class="navbar-collapse collapse" id="navbarsExample05">
-              <div class="d-flex justify-content-between col-12">
-                <div>
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <span
-                        class="nav-link active cursor"
-                        aria-current="page"
-                        id="about-page-link"
-                        tabindex="1"
-                        >About</span
-                      >
-                    </li>
-                    <li id="add-pic-link-container" class="nav-item">
-                      <span
-                        class="nav-link active cursor"
-                        aria-current="page"
-                        id="create-pic-page-link"
-                        >Add Pic</span
-                      >
-                    </li>
-                  </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
+            <div class="container-fluid">
+                <span id="home-link" class="navbar-brand cursor">SSA</span>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="navbar-collapse collapse" id="navbarsExample05">
+                    <div class="d-flex justify-content-between col-12">
+                        <div>
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <span class="nav-link active cursor" aria-current="page" id="about-page-link"
+                                        tabindex="1">About</span>
+                                </li>
+                                <li id="add-pic-link-container" class="nav-item">
+                                    <span class="nav-link active cursor" aria-current="page"
+                                        id="create-pic-page-link">Add Pic</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul id="login-link-container" class="navbar-nav">
+                                <li class="nav-item">
+                                    <span class="nav-link active cursor" aria-current="page" id="signup-page-link"
+                                        tabindex="2">Signup</span>
+                                </li>
+                                <li class="nav-item">
+                                    <span class="nav-link active cursor" aria-current="page"
+                                        id="login-page-link">Login</span>
+                                </li>
+                            </ul>
+                            <ul id="logout-link-container" class="d-none">
+                                <li class="nav-item dropdown">
+                                    <span class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                        aria-expanded="false">
+                                        <i class="bi bi-person-circle"></i>
+                                    </span>
+                                    <ul class="dropdown-menu" style="transform: translate(-100px, 10px)">
+                                        <li>
+                                            <span id="edit-user-link" class="dropdown-item cursor"><i
+                                                    class="bi bi-pencil-square"></i> Edit User</span>
+                                        </li>
+                                        <li>
+                                            <span id="logout-link" class="dropdown-item cursor"><i
+                                                    class="bi bi-dash-circle"></i> Logout</span>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                  <ul id="login-link-container" class="navbar-nav">
-                    <li class="nav-item">
-                      <span
-                        class="nav-link active cursor"
-                        aria-current="page"
-                        id="signup-page-link"
-                        tabindex="2"
-                        >Signup</span
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <span
-                        class="nav-link active cursor"
-                        aria-current="page"
-                        id="login-page-link"
-                        >Login</span
-                      >
-                    </li>
-                  </ul>
-                  <ul id="logout-link-container" class="d-none">
-                    <li class="nav-item dropdown">
-                      <span
-                        class="nav-link dropdown-toggle"
-                        data-bs-toggle="dropdown"
-                        role="button"
-                        aria-expanded="false"
-                      >
-                        <i class="bi bi-person-circle"></i>
-                      </span>
-                      <ul
-                        class="dropdown-menu"
-                        style="transform: translate(-100px, 10px)"
-                      >
-                        <li>
-                          <span id="edit-user-link" class="dropdown-item cursor"
-                            ><i class="bi bi-pencil-square"></i> Edit User</span
-                          >
-                        </li>
-                        <li>
-                          <span id="logout-link" class="dropdown-item cursor"
-                            ><i class="bi bi-dash-circle"></i> Logout</span
-                          >
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
-          </div>
         </nav>
-      </header>
+    </header>
     <main>
         <!-- דף הבית -->
         <div id="home-page" class="d-block">
@@ -124,23 +88,59 @@
                 </div>
             </div>
 
-            <!-- מצגת התמונות -->
-            <div class="center">
-                <div class="col-12 col-md-10 col-xl-8">
-                    <figure>
-                        <img src="https://cdn.pixabay.com/photo/2022/03/12/19/14/sea-7064686_960_720.jpg" alt="beach"
-                            class="img-fluid efrat" id="slider-image">
+            <!-- תצוגת מידע -->
+            <div id="data-container" class="d-block">
+                <!-- בקרי תצוגה -->
+                <div class="container mb-2">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <i id="slider-icon" class="bi bi-images fs-3 p-1 cursor"></i>
+                            <i id="table-icon" class="bi bi-table fs-3 p-1 cursor"></i>
+                            <i id="cards-icon" class="bi bi-grid-3x3-gap-fill cursor fs-3 p-1"></i>
+                        </div>
+                        <div>
+                            <i id="sort-down-icon" class="bi bi-sort-alpha-down-alt fs-3 p-1 cursor"></i>
+                            <i id="sort-up-icon" class="bi bi-sort-alpha-down fs-3 p-1 cursor"></i>
+                        </div>
+                    </div>
+                </div>
 
-                        <figcaption class="figcaption">
-                            Photographed by: <span id="slider-credits">VicVic</span>
-                        </figcaption>
-                    </figure>
+                <!-- מצגת התמונות -->
+                <div id="slider-display" class="d-block">
+                    <div class="center">
+                        <div class="col-12 col-md-10 col-xl-8">
+                            <figure>
+                                <img src="https://cdn.pixabay.com/photo/2022/03/12/19/14/sea-7064686_960_720.jpg"
+                                    alt="beach" class="img-fluid efrat" id="slider-image">
+
+                                <figcaption class="figcaption">
+                                    Photographed by: <span id="slider-credits">VicVic</span>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="center mb-4">
+                        <div id="slider-prev-btn" class="btn btn-outline-dark mx-2">Prev</div>
+                        <div id="slider-next-btn" class="btn btn-outline-dark mx-2">Next</div>
+                    </div>
+                </div>
+
+                <!-- תצוגת טבלה -->
+                <div id="table-display" class="d-dlock">table display</div>
+            </div>
+
+            <!-- תצוגת אין מידע -->
+            <div id="no-data-container" class="d-none">
+                <div class="center m-t">
+                    <div class="col-12 col-md-10 col-xl-8">
+                        <h2 class="fs-5">OOOps... It seems that there are no pictures to show</h2>
+                        <p id="goto-create-pic-page-link" class="cursor text-primary">click here to add a new picture...
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="center mb-4">
-                <div id="slider-prev-btn" class="btn btn-outline-dark mx-2">Prev</div>
-                <div id="slider-next-btn" class="btn btn-outline-dark mx-2">Next</div>
-            </div>
+
+
         </div>
 
 
@@ -243,6 +243,7 @@
                 </form>
             </div>
         </div>
+
         <!-- דף הרשמה -->
         <div id="signup-page" class="d-none">
             <div class="bg-light">
@@ -262,8 +263,8 @@
                             <div class="col-12 col-md-6">
                                 <label for="first-name-signup-field">First Name <span class="text-danger">*</span>
                                 </label>
-                                <input type="text" class="form-control mb-2" name="first"
-                                    id="first-name-signup-field" minlength="2" autocomplete="off" />
+                                <input type="text" class="form-control mb-2" name="first" id="first-name-signup-field"
+                                    minlength="2" autocomplete="off" />
                                 <span id="first-name-signup-error-span" class="text-danger"></span>
                             </div>
                             <div class="col-12 col-md-6">
@@ -284,8 +285,8 @@
                             </div>
                             <div class="col-12 col-md-6 col-xl-4">
                                 <label for="country-signup-field">Country <span class="text-danger">*</span></label>
-                                <input type="text" class="form-control mb-2" name="country"
-                                    id="country-signup-field" minlength="2" autocomplete="off" />
+                                <input type="text" class="form-control mb-2" name="country" id="country-signup-field"
+                                    minlength="2" autocomplete="off" />
                                 <span id="country-signup-error-span" class="text-danger"></span>
                             </div>
                             <div class="col-12 col-md-6 col-xl-4">
@@ -332,8 +333,7 @@
                         <h6>Security</h6>
                         <div class="row">
                             <div class="col-12 col-md-6">
-                                <label for="password-signup-field">Password<span
-                                        class="text-danger">*</span></label>
+                                <label for="password-signup-field">Password<span class="text-danger">*</span></label>
                                 <input autocomplete="off" class="form-control mb-2" type="password" name="password"
                                     id="password-signup-field" minlength="2" />
                                 <span id="password-signup-error-span" class="text-danger"></span>
@@ -349,8 +349,8 @@
                         <div class="center my-2">
                             <div>
                                 <label for="isBiz-signup-field">Business Client</label>
-                                <input autocomplete="off" class="form-check-inline mb-2" type="checkbox"
-                                    name="isBiz" id="isBiz-signup-field" />
+                                <input autocomplete="off" class="form-check-inline mb-2" type="checkbox" name="isBiz"
+                                    id="isBiz-signup-field" />
                             </div>
                         </div>
                         <input type="button" id="submit-signup-user-btn" value="Submit"
